Finalização do Crud em users: PUT e GET
